samples/echoheader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheader
spec:
  ports:
  - name: http
    port: 10001
    targetPort: 10001
  selector:
    app: echoheader
  type: ClusterIP
