samples/echoheader/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheader
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: echoheader
          servicePort: 10001
